[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/mainmenu.gd" type="Script" id=1]
[ext_resource path="res://art/main menu/manticore9.png" type="Texture" id=2]
[ext_resource path="res://art/font/Comfortaa-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://art/main menu/manticore1.png" type="Texture" id=4]
[ext_resource path="res://art/main menu/manticore4.png" type="Texture" id=5]
[ext_resource path="res://art/main menu/manticore5.png" type="Texture" id=6]
[ext_resource path="res://art/main menu/manticore6.png" type="Texture" id=7]
[ext_resource path="res://art/main menu/manticore7.png" type="Texture" id=8]
[ext_resource path="res://art/main menu/manticore8.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]

size = 20
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 20
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 20
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[sub_resource type="Animation" id=4]

length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("HBoxContainer/VBoxContainer/title/title_ctrl:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 2 ) ]
}

[node name="mainmenu" type="Container"]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1366.0
margin_top = -768.0
grow_horizontal = 0
grow_vertical = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="ColorRect" type="ColorRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Size Flags" ]

[node name="HBoxContainer" type="HBoxContainer" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 0
_sections_unfolded = [ "Focus", "Grow Direction", "Rect", "Size Flags" ]

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 958.0
margin_bottom = 768.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Focus", "Hint", "Rect" ]

[node name="spacer" type="Label" parent="HBoxContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 958.0
margin_bottom = 180.0
rect_min_size = Vector2( 0, 180 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="title" type="HBoxContainer" parent="HBoxContainer/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 184.0
margin_right = 958.0
margin_bottom = 324.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="spacer" type="Label" parent="HBoxContainer/VBoxContainer/title" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 63.0
margin_right = 390.0
margin_bottom = 77.0
rect_min_size = Vector2( 390, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="title_ctrl" type="TextureRect" parent="HBoxContainer/VBoxContainer/title" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 394.0
margin_right = 958.0
margin_bottom = 140.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0
_sections_unfolded = [ "Anchor", "Grow Direction", "Hint", "Margin", "Rect", "Size Flags" ]

[node name="spacer2" type="Label" parent="HBoxContainer/VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 328.0
margin_right = 958.0
margin_bottom = 378.0
rect_min_size = Vector2( 0, 50 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 382.0
margin_right = 958.0
margin_bottom = 567.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="spacer" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 85.0
margin_right = 610.0
margin_bottom = 99.0
rect_min_size = Vector2( 610, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="menu_options" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 614.0
margin_right = 748.0
margin_bottom = 185.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 3
custom_constants/separation = 23
alignment = 1
_sections_unfolded = [ "Anchor", "Margin", "Size Flags", "custom_constants" ]

[node name="new_game_btn" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer/menu_options" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 134.0
margin_bottom = 29.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "New Game"
flat = true
align = 1
_sections_unfolded = [ "Textures", "custom_colors", "custom_fonts" ]

[node name="load_game_btn" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer/menu_options" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 52.0
margin_right = 134.0
margin_bottom = 81.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Load Game"
flat = true
align = 1
_sections_unfolded = [ "Textures", "custom_colors", "custom_fonts" ]

[node name="options_btn" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer/menu_options" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 104.0
margin_right = 134.0
margin_bottom = 133.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Options"
flat = true
align = 1
_sections_unfolded = [ "Textures", "custom_fonts" ]

[node name="quit_game_btn" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer/menu_options" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 156.0
margin_right = 134.0
margin_bottom = 185.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Quit"
flat = true
align = 1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Size Flags", "Textures", "Theme", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]

root_node = NodePath("..")
autoplay = "titlescreen"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/titlescreen = SubResource( 4 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/menu_options/new_game_btn" to="." method="_on_new_game_btn_pressed"]

[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/menu_options/load_game_btn" to="." method="_on_load_game_btn_pressed"]

[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/menu_options/options_btn" to="." method="_on_options_btn_pressed"]

[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/menu_options/quit_game_btn" to="." method="_on_quit_game_btn_pressed"]


